Added basic form to landingpage

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -4,5 +4,14 @@
 
 .form_head {
   text-align: center;
-  margin-top: 80px;
+  margin-top: 60px;
+}
+
+.input_format {
+  width: 100%;
+  margin-bottom: 40px;
+  height: 20px;
+  border: none;
+  border-bottom: 1px solid grey;
+  font-size: 12px;
 }
