--- a/app/views/static_pages/signup.html.erb
+++ b/app/views/static_pages/signup.html.erb
@@ -5,7 +5,7 @@
   <div class="grid_6 prefix_3">
 
     <div class="form_head">
-      <img src="/assets/AGS_Logo_02.png" width="300px">
+      <img src="/assets/AGS_Logo_02.png" width="270px">
     </div>
 
   </div>
@@ -17,30 +17,30 @@
 
     <div class="grid_3 alpha">
       <%= label_tag %>
-      <%= text_field_tag :name , nil, placeholder: "Name" %>
+      <%= text_field_tag :name , nil, placeholder: "Name", class: "input_format" %>
 
       <%= label_tag %>
-      <%= text_field_tag :username , nil, placeholder: "Username" %>
+      <%= text_field_tag :username , nil, placeholder: "Username", class: "input_format" %>
 
       <%= label_tag %>
-      <%= text_field_tag :country_club , nil, placeholder: "Your Country Club" %>
+      <%= text_field_tag :country_club , nil, placeholder: "Your Country Club", class: "input_format" %>
 
       <%= label_tag %>
-      <%= date_field_tag :birthday , nil, placeholder: "Birthday" %>
+      <%= date_field_tag :birthday , nil, placeholder: "Birthday", class: "input_format" %>
     </div>
 
     <div class="grid_3 omega">
       <%= label_tag %>
-      <%= text_field_tag :email , nil, placeholder: "Email Address" %>
+      <%= text_field_tag :email , nil, placeholder: "Email Address", class: "input_format" %>
 
       <%= label_tag %>
-      <%= password_field_tag :username , nil, placeholder: "Password" %>
+      <%= password_field_tag :username , nil, placeholder: "Password", class: "input_format" %>
 
       <%= label_tag %>
-      <%= number_field_tag :handicap, nil, placeholder: "Handicap" %>
+      <%= number_field_tag :handicap, nil, placeholder: "Handicap", class: "input_format" %>
 
-      <%= label_tag "Upload Picture" %>
-      <%= file_field_tag :picture %>
+      <%= label_tag %>
+      <%= file_field_tag :picture, placeholder: "Upload Profile Pictrue", class: "input_format" %>
     </div>
 
     <% end %>
