Added button styles

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -41,6 +41,10 @@ $form_font: Gentium Book Basic, serif;
   width: 40%;
   background: white;
   box-shadow: 0px 0px 0px white;
+  border: none;
+  background-color: #55762b;
+  color: white;
+  padding: 5px;
 
 }
 
