--- a/app/views/static_pages/signup.html.erb
+++ b/app/views/static_pages/signup.html.erb
@@ -17,7 +17,7 @@
 
     <div class="grid_3 alpha">
       <%= label_tag %>
-      <%= text_field_tag :name , nil, placeholder: "Name", class: "input_format" %>
+      <%= text_field_tag :name , nil, placeholder: "Name", class: "input_format", title: "Please enter name, (eg. Tiger Woods)" %>
 
       <%= label_tag %>
       <%= text_field_tag :username , nil, placeholder: "Username", class: "input_format" %>
