--- a/app/views/static_pages/signup.html.erb
+++ b/app/views/static_pages/signup.html.erb
@@ -34,7 +34,7 @@
       <%= text_field_tag :email , nil, placeholder: "Email Address", class: "input_format", title: "Please enter your email address." %>
 
       <%= label_tag %>
-      <%= password_field_tag :username , nil, placeholder: "Password", class: "input_format", title: "Please enter your password." %>
+      <%= password_field_tag :password , nil, placeholder: "Password", class: "input_format", title: "Please enter your password." %>
 
       <%= label_tag %>
       <%= number_field_tag :handicap, nil, placeholder: "Handicap", class: "input_format", title: "Don't be modest, tell us how good you are." %>
