--- a/app/views/static_pages/signup.html.erb
+++ b/app/views/static_pages/signup.html.erb
@@ -13,7 +13,7 @@
   <div class="grid_6 prefix_3">
 
 
-    <%= form_tag do%>
+    <%= form_tag users_url, method: 'post' do%>
 
     <div class="grid_3 alpha">
       <%= label_tag %>
