--- a/app/views/static_pages/signup.html.erb
+++ b/app/views/static_pages/signup.html.erb
@@ -26,7 +26,7 @@
       <%= text_field_tag :country_club , nil, placeholder: "Your Country Club", class: "input_format", title: "Please enter your Country Club." %>
 
       <%= label_tag %>
-      <%= date_field_tag :birthday , nil, placeholder: "Birthday", class: "input_format", title: "Please tell us your birthday." %>
+      <%= date_field_tag :birthday , nil, placeholder: "Birthday", class: "input_format", id: "datepicker", title: "Please tell us your birthday." %>
     </div>
 
     <div class="grid_3 omega">
