--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -42,10 +42,15 @@ $form_font: Gentium Book Basic, serif;
   width: 40%;
   background: white;
   box-shadow: 0px 0px 0px white;
-  border: none;
-  background-color: #55762b;
+  border: solid 1px black;
+  border-radius: 5px;
+  background-color: #82bb6a;
   color: white;
-  padding: 5px;
+  padding: 10px;
+
+  &:hover {
+    background-color: darken(#82bb6a, 15%);
+  }
 
 }
 
