Add password recovery page

--- a/app/views/static_pages/signin.html.erb
+++ b/app/views/static_pages/signin.html.erb
@@ -20,7 +20,7 @@
 
       <div class="grid_3 omega">
         <%= label_tag %>
-        <%= password_field_tag :password , nil, placeholder: "Password", class: "input_format", title: "Please enter your password." %>
+        <%= password_field_tag :password , nil, placeholder: "Password", class: "input_format", title: "Please enter your password (<a href= #{password_recovery_url}>forgot password</a>)." %>
       </div>
 
       <div class="grid_6 form_submit">
