--- a/app/views/static_pages/signup.html.erb
+++ b/app/views/static_pages/signup.html.erb
@@ -29,7 +29,7 @@
 
       <div class="grid_3 omega">
         <%= label_tag %>
-        <%= text_field_tag :email , nil, placeholder: "Email Address", class: "input_format", title: "Please enter your email address." %>
+        <%= email_field_tag :email , nil, placeholder: "Email Address", class: "input_format", title: "Please enter your email address." %>
 
         <%= label_tag %>
         <%= password_field_tag :password , nil, placeholder: "Password", class: "input_format", title: "Please enter your password." %>
